FlightPath 6.x Changelog
========================


2021-06-28
  Made change in content_content_load(), to make sure that when we load based on cid, we order by vid DESC, to make
  sure we always get the most recent version.
  

2021-06-26
  Added new field to calendar's appointment content type, to keep up with video meeting data.
  
  Fixed typo in the content.module (misspelling of word).
    

2021-06-23
  Instead of passing the session_id during redirect, we now pass a "fp_session_str" which contains
  a method of validating the session_id, to make sure it is not a hacker attempting to imitate a valid
  session.  This was accomplished by new functions in misc.inc and checking in index.php before we
  trust the session_id in the URL.
  
  

2021-06-22
  Fixed bug in user module where adding a new faculty user caused mysql error.
  
  Added a backtrace (like we do for MySQL errors) to the PHP error handler in misc.inc.  Also adding to watchdog
  when we get a warning or error from the handler.
  
  Changed the way cookies are unset on logout, to fix an issue where they were not being unset correctly, but also
  to handle possible array notation in the cookie names.  See system.module
  
  Made changes to watchdog severity level for certain types of data, in anticipation of a module which would delete, for example,
  "WATCHDOG_DEBUG" entries after X amount of time, since they are the least important.  Also made changes to the PHP error handler
  so it correctly identifies in the watchdog whether it was a PHP error or warning, and adjusts the severity constant accordingly.
  
  Fixed typo in user settings pulldown menu.
  
  Made it so if you are not logged in, the left sidebar menu shows a link to the login page.
  

2021-06-17
  Fixed small typo in form_error() message when rejecting a saved degree.
  
  In student_search module, got rid of the "majors"-related permissions.  Also cleaned up code which had been commented out.
  

2021-06-16